# wav2raw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WaveFile.cpp  WaveFile.h  main.cpp  wav2raw.sln  wav2raw.vcxproj  wav2raw.vcxproj.filters
src/: WaveFile.cpp  WaveFile.h  main.cpp
